# network-architecture-verification-and-validation

./: .coveragerc  .dockerignore  .gitignore  LICENSE  Makefile  NOTICE  README.md  bump_version.sh  requirements-dev.txt  requirements.txt  setup-env  setup.cfg
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  navv-build-push-ghcr.yml  publish-to-pypi.yml
docker/: Dockerfile  README.md  backup_docker.sh  build_docker.sh  docker-uid-gid-setup.sh  local.zeek  navv-build-for-export.sh  navv-docker.sh
src/navv/: __init__.py  __main__.py  _version.py  bll.py  commands.py  data_types.py  gui.py  message_handler.py  network_analysis.py  spreadsheet_tools.py  utilities.py  validators.py  zeek.py
src/navv/data/: data.pkl
src/navv/gui/: app.py  bll.py  utils.py
src/navv/gui/static/: app.js  styles.css
src/navv/gui/templates/: base.html  create_new.html  index.html  update_existing.html
src/navv/utils/: tools.py
