[metadata]
name = navv
version = attr: navv._version.__version__
author = Seth Grover
author_email = seth.grover@inl.gov
description = Generate a spreadsheet for network traffic analysis from PCAP data and Zeek logs
long_description = file: README.md, LICENSE, NOTICE
url = https://github.com/idaholab/network-architecture-verification-and-validation
project_urls =
    Bug Tracker = https://github.com/idaholab/network-architecture-verification-and-validation/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: System :: Networking :: Monitoring
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    lxml>=4.3.2
    netaddr>=0.7.19
    openpyxl>=3.0.6
    tqdm>=4.57.0

[options.packages.find]
where = src

[options.package_data]
navv = data/*.pkl

[options.entry_points]
console_scripts =
    navv = navv.__main__:main